--- a/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/layouts/main.hbs
@@ -2,11 +2,23 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{title}}</title>
+        <link rel="stylesheet" href="/static/site.css">
     </head>
     <body>
-        {{{body}}}
+        <div id="page-content">
+            <header>
+                    <ul>
+                        <li>
+                            <a href="/catalog">Catalog</a>
+                        </li>
+                    </ul>
+            </header>
+            <main>
+                {{{body}}}
+            </main>
+
+            <footer>Mariya Zaharieva &copy;2023</footer>
+        </div>
     </body>
     </html>
