--- a/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/static/site.css
+++ b/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/static/site.css
@@ -1,3 +1,25 @@
+@import url('./vars.css');
+@import url('./theme.css');
+@import url('./layouts.css');
+@import url('./layout-header.css');
+@import url('./layout-section.css');
+@import url('./layout-position.css');
+@import url('./layout-forms.css');
+
+.style-divider {
+    background-color: red;
+    height: 8px;
+    border: none;
+}
+
+* {
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 18px;
+}
+
 h1 {
     font-size: 150%;
     padding: 16px;
@@ -40,4 +62,14 @@ html {
     height: 64px;
 }
 
+.error-box {
+    color: red;
+    padding: 16px 16px;
+    margin: 32px;
+    background-color: hsl(var(--action-color), var(--action-s), 25%);
+    box-shadow: var(--shadow);
+}
 
+.field-error {
+    border: 1px solid red;
+}
