--- a/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/create.hbs
+++ b/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/create.hbs
@@ -1,2 +1,17 @@
-<h1>Create</h1>
-<p>Create Page</p>
+<section>
+    <h1 class="item">Create new accomodation</h1>
+    <main class="item padded align-center">
+        <form class="layout left large" action="/create" method="post">
+            <div class="col aligned">
+            <label><span>Name</span><input type="text" name="name"></label>
+            <label><span>City</span><input type="text" name="city"></label>            
+            <label><span>Beds</span><input type="text" name="beds"></label> 
+            <label><span>Price per nigth</span><input type="number" name="price"></label>  
+            <label><span>Image URL</span><input type="text" name="imgUrl"></label>
+            <label><span>Description</span><input type="text" name="description"></label> 
+            <button>Create Accomodation</button>
+            </div>
+        </form>
+
+    </main>  
+</section>
