--- a/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/details.hbs
+++ b/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/details.hbs
@@ -3,6 +3,7 @@
                 //ако не сменим контекста, трябва да използваме room.name -->
 <h1>{{name}} - Details</h1>
 <main>
+    <img src="{{imgUrl}}">
     <p>{{description}}</p>
     <p><strong>Price per night: {{price}}$</strong></p>
 </main>
