--- a/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/layouts/main.hbs
@@ -12,6 +12,9 @@
                         <li>
                             <a href="/catalog">Catalog</a>
                         </li>
+                        <li>
+                            <a href="/create">Create</a>
+                        </li>
                     </ul>
             </header>
             <main>
