--- a/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/catalog.hbs
+++ b/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/catalog.hbs
@@ -1,7 +1,7 @@
 <section>
-<h1>Catalog Page</h1>
+<h1 class="item">Catalog Page</h1>
 <main>
-   <ul>
+   <ul class="catalog cards">
     {{#each rooms}}
     {{>roomCard}}
     {{/each}}
