--- a/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/create.hbs
+++ b/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/create.hbs
@@ -2,6 +2,13 @@
     <h1 class="item">Create new accomodation</h1>
     <main class="item padded align-center">
         <form class="layout left large" action="/create" method="post">
+            {{#if error}}
+                <div class="error-box">
+                    {{#each error}}
+                    <p>{{this}}</p>
+                    {{/each}}
+                </div>
+            {{/if}}
             <div class="col aligned">
             <label><span>Name</span><input type="text" name="name"></label>
             <label><span>City</span><input type="text" name="city"></label>            
