--- a/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/details.hbs
+++ b/JS Web/JS Back-end/02. Express and Templating/Softuni Booking/views/details.hbs
@@ -1,9 +1,9 @@
 <section>
 {{#with room}} <!--сменя контекста //в случая сме подали room като свойство не като контекст и затова сменяме контекста на room и си достъпваме свойсвата
                 //ако не сменим контекста, трябва да използваме room.name -->
-<h1>{{name}} - Details</h1>
-<main>
-    <img src="{{imgUrl}}">
+<h1 class="item">{{name}} - Details</h1>
+<main class="layout rigth latge">
+    <img src="{{imgUrl}}" class="img-large">
     <p>{{description}}</p>
     <p><strong>Price per night: {{price}}$</strong></p>
 </main>
