--- a/JS Web/JS Back-end/03. Mongo DB/Cubicle Worrshop 2/views/details.hbs
+++ b/JS Web/JS Back-end/03. Mongo DB/Cubicle Worrshop 2/views/details.hbs
@@ -1,3 +1,5 @@
+
+      
       {{#with cube}} 
       <h1>{{name}}</h1>
       <img class="cube" src="{{imageUrl}}">
@@ -5,6 +7,7 @@
         <p><span>Description:</span> {{description}}</p>
         <p><span>Difficulty level:</span> {{difficulty}}</p>
         <a class="btn" href="/">Back</a>
+        <a class="btn" href="/edit/{{_id}}">Edit</a>
       </div>
     {{/with}}
   
