--- a/JS Web/JS Back-end/03. Mongo DB/Cubicle Worrshop 2/views/attachAccessory.hbs
+++ b/JS Web/JS Back-end/03. Mongo DB/Cubicle Worrshop 2/views/attachAccessory.hbs
@@ -4,7 +4,7 @@
         <h2>{{cube.name}}</h2>
         <img class="cube" src="{{cube.imageURL}}">
         {{#if accessories}}
-        <form action='/details/{{cube._id}}/atach' method="POST">
+        <form action='/details/{{cube._id}}/attach' method="POST">
           <label for="accessory">Accessories</label>
           <select id="accessory" name="accessory">
             {{#each accessories}}
@@ -17,6 +17,6 @@
         <h3 class="italic">This cube has all available accessories so far or there is no available at all...
         {{/if}}
         </h3>
-        <a class="btn" href="/">Back</a>
+        <a class="btn" href="/details/{{cube._id}}">Back</a>
       </div>
     
