--- a/JS Web/JS Back-end/03. Mongo DB/Cubicle Worrshop 2/views/details.hbs
+++ b/JS Web/JS Back-end/03. Mongo DB/Cubicle Worrshop 2/views/details.hbs
@@ -7,7 +7,7 @@
         <p><span>Description:</span> {{description}}</p>
         <p><span>Difficulty level:</span> {{difficulty}}</p>
         <a class="btn" href="/">Back</a>
-        <a class="btn" href="/details/{{_id}}/atach">Attach Accessories</a>
+        <a class="btn" href="/details/{{_id}}/attach">Attach Accessories</a>
         <a class="btn" href="/edit/{{_id}}">Edit</a>
       </div>
       <h2>Accessories</h2>
