--- a/JS Web/JS Back-end/04. Session and Authentication/Cubicle Worrshop 3/views/details.hbs
+++ b/JS Web/JS Back-end/04. Session and Authentication/Cubicle Worrshop 3/views/details.hbs
@@ -7,8 +7,8 @@
         <p><span>Description:</span> {{description}}</p>
         <p><span>Difficulty level:</span> {{difficulty}}</p>
         <a class="btn" href="/">Back</a>
-        <a class="btn" href="/details/{{_id}}/attach">Attach Accessories</a>
-        <a class="btn" href="/edit/{{_id}}">Edit</a>
+        <a class="btn" href="/products/details/{{_id}}/attach">Attach Accessories</a>
+        <a class="btn" href="/products/edit/{{_id}}">Edit</a>
       </div>
       <h2>Accessories</h2>
             <div class="accessories">
