--- a/JS Web/JS Back-end/04. Session and Authentication/Cubicle Worrshop 3/views/attachAccessory.hbs
+++ b/JS Web/JS Back-end/04. Session and Authentication/Cubicle Worrshop 3/views/attachAccessory.hbs
@@ -4,7 +4,7 @@
         <h2>{{cube.name}}</h2>
         <img class="cube" src="{{cube.imageURL}}">
         {{#if accessories}}
-        <form action='/details/{{cube._id}}/attach' method="POST">
+        <form action='/details/attach/{{cube._id}}' method="POST">
           <label for="accessory">Accessories</label>
           <select id="accessory" name="accessory">
             {{#each accessories}}
