--- a/JS Web/JS Back-end/04. Session and Authentication/Cubicle Worrshop 3/views/index.hbs
+++ b/JS Web/JS Back-end/04. Session and Authentication/Cubicle Worrshop 3/views/index.hbs
@@ -1,7 +1,7 @@
 
 
       <h1>Browser</h1>
-      <form action="/" method="GET">
+      <form action="/products" method="GET">
         <input type="text" class="search" name="search" placeholder="Search...">
         <input type="number" name="from" class="difficulty" placeholder="Difficulty from...">
         <span>-</span>
@@ -11,7 +11,7 @@
       {{#each cubes}}
       {{> cube}}
       {{else}}
-      <span>No cubes in database.<a href="/create">Create first one.</a></span>
+      <span>No cubes in database.<a href="/products/create">Create first one.</a></span>
       {{/each}}
       
 
