--- a/JS Web/JS Back-end/04. Session and Authentication/Cubicle Worrshop 3/views/register.hbs
+++ b/JS Web/JS Back-end/04. Session and Authentication/Cubicle Worrshop 3/views/register.hbs
@@ -2,8 +2,12 @@
 	<h1>Register Form</h1>
 <div class="form">
     <form action='/auth/register' method="POST">
+        {{#if error}}
+        <span class="error">{{error}}</span>
+        {{/if}}
+        
         <label for="username">Username</label>
-        <input type="text" id="username" name="username">
+        <input type="text" id="username" name="username" value="{{data.username}}">
 
         <label for="password">Password</label>
         <input type="password" id="password" name="password">
