--- a/JS Web/JS Back-end/05. Validation and Error handling/Cubicle Worrshop 4/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/05. Validation and Error handling/Cubicle Worrshop 4/views/layouts/main.hbs
@@ -25,6 +25,13 @@
         {{/if}}
       </ul>
     </header>
+    {{#if errors}}
+    <div id="notifications">
+      {{#each errors}}
+      <p>{{this}}</p>
+      {{/each}}
+    </div>
+    {{/if}}
     <main>
       {{{body}}}
     </main>
