--- a/JS Web/JS Back-end/05. Validation and Error handling/Cubicle Worrshop 4/views/register.hbs
+++ b/JS Web/JS Back-end/05. Validation and Error handling/Cubicle Worrshop 4/views/register.hbs
@@ -9,6 +9,9 @@
         <label for="username">Username</label>
         <input type="text" id="username" name="username" value="{{data.username}}">
 
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" value="{{data.email}}">
+
         <label for="password">Password</label>
         <input type="password" id="password" name="password">
 
