Login and Register
Login and Register

--- a/JS Web/JS Back-end/06. Exam preparation 1/BookingUni/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/06. Exam preparation 1/BookingUni/views/layouts/main.hbs
@@ -12,14 +12,10 @@
     <div id="container">
         {{#if errors}}
         <div>
-            <div class="notification loadingBox">
-                Loading …
-            </div>
-            <div class="notification infoBox">
-                <span>Info</span>
-            </div>
             <div class="notification errorBox">
-                <span>Error</span>
+                {{#each errors}}
+                <p><span>{{this}}</span></p>
+                {{/each}}
             </div>
         </div>
         {{/if}}
