--- a/JS Web/JS Back-end/06. Exam preparation 1/BookingUni/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/06. Exam preparation 1/BookingUni/views/layouts/main.hbs
@@ -25,7 +25,7 @@
             <div class="left-container">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/hotels/create">Add +</a></li>
+                    <li><a href="/bookingPages/create">Add +</a></li>
                 </ul>
             </div>
             <div class="right-container">
