--- a/JS Web/JS Back-end/06. Exam preparation 1/BookingUni/views/userPages/register.hbs
+++ b/JS Web/JS Back-end/06. Exam preparation 1/BookingUni/views/userPages/register.hbs
@@ -4,9 +4,9 @@
            
             <form id="formRegister" action="/auth/register" method="POST">
                 <label for="email">Email:</label>
-                <input type="text" id="email" name="email" placeholder="Email" value="{{email}}">
+                <input type="text" id="email" name="email" placeholder="Email" value="{{userData.email}}">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" placeholder="Enter your Username" value="{{username}}">
+                <input type="text" id="username" name="username" placeholder="Enter your Username" value="{{userData.username}}">
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" placeholder="Password">
                 <label for="rePassword">Repeat Password:</label>
