--- a/JS Web/JS Back-end/06. Exam preparation 1/BookingUni/views/partials/hotel.hbs
+++ b/JS Web/JS Back-end/06. Exam preparation 1/BookingUni/views/partials/hotel.hbs
@@ -1,4 +1,4 @@
-<a href="/hotels/{{_id}}" class="added-hotel">
+<a href="/bookinPages/{{_id}}" class="added-hotel">
                     <img src="{{imageUrl}}" alt="Hotel Photo"
                         class="picture-added-hotel">
                     <h3>{{name}}</h3>
