--- a/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/layouts/main.hbs
@@ -3,12 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>BookingUni</title>
-    <link rel="stylesheet" href="../static/css/style.css">
+    <title>Express Exam</title>
+    <link href="/static/css/style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-    {{body}}
+    <div class="container">
+        <nav>
+            <a>Theater</a>
+            <ul>
+                <li><a href="/">Home </a></li>
+                <li><a href="/auth/logout">Logout</a></li>
+                <li><a href="/auth/login">Login</a></li>
+                <li><a href="/auth/register">Register</a></li>
+            </ul>
+        </nav>
+
+        <section class="notifications error">
+            <p>Message...</p>
+        </section>
+        {{{body}}}
+        <footer>
+            <div>© 2020
+                <a href="https://softuni.bg/courses/js-back-end">JS Back-End</a>
+            </div>
+        </footer>
+
+    </div>
 </body>
 
 </html>
