--- a/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/layouts/main.hbs
@@ -18,10 +18,13 @@
                 <li><a href="/auth/register">Register</a></li>
             </ul>
         </nav>
-
+        {{#if errors}}
         <section class="notifications error">
-            <p>Message...</p>
+           {{#each errors}}
+            <p>{{this}}</p>
+            {{/each}}
         </section>
+        {{/if}}
         {{{body}}}
         <footer>
             <div>© 2020
