--- a/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/login.hbs
+++ b/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/login.hbs
@@ -3,11 +3,11 @@
                 <h2>Login</h2>
                 <div>
                     <label for="username">Username:</label>
-                    <input type="text" placeholder="Username" value="{{userData.username}}">
+                    <input type="text" placeholder="Username" name="username" value="{{userData.username}}">
                 </div>
                 <div>
                     <label for="password">Password:</label>
-                    <input type="password" placeholder="Password" value="">
+                    <input type="password" placeholder="Password" name="password" value="">
                 </div>
 
                 <button class="btn" type="submit">Login</button>
