--- a/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/register.hbs
+++ b/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/register.hbs
@@ -3,17 +3,17 @@
                 <h2>Register</h2>
                 <div class="on-dark">
                     <label for="username">Username:</label>
-                    <input  type="text" placeholder="Steven" value="{{userData.username}}">
+                    <input  type="text" placeholder="Steven" name="username" value="{{userData.username}}">
                 </div>
 
                 <div class="on-dark">
                     <label for="password">Password:</label>
-                    <input  type="password"  placeholder="********" value="">
+                    <input  type="password"  placeholder="********" name="password" value="">
                 </div>
             
                 <div class="on-dark">
                     <label for="repeatPassword">Repeat Password:</label>
-                    <input  type="password" placeholder="********" value="">
+                    <input  type="password" placeholder="********" name="rePass" value="">
                 </div>
             
                 <button class="btn" type="submit" >Register</button>
