--- a/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/theater/edit.hbs
+++ b/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/theater/edit.hbs
@@ -3,15 +3,15 @@
                 <h1>Edit Theater</h1>
                 <div>
                     <label for="title">Theater Title:</label>
-                    <input type="text" placeholder="Theater name"value="">
+                    <input type="text" placeholder="Theater name" name="title" value="">
                 </div>
                 <div>
                     <label for="description">Theater Description:</label>
-                    <textarea placeholder="Description" ></textarea>
+                    <textarea placeholder="Description" name="description"></textarea>
                 </div>
                 <div>
                     <label for="imageUrl">Image url:</label>
-                    <input type="text" placeholder="Image Url" value="">
+                    <input type="text" placeholder="Image Url" name="imageUrl" value="">
                 </div>
                 <div class="check">
                     <input type="checkbox" id="check-box" >
