--- a/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/partials/play.hbs
+++ b/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/partials/play.hbs
@@ -7,7 +7,7 @@
                         <div class="info">
                             <h4>{{title}}</h4>
                             <div class="info-buttons">
-                                <a class="btn details" href="/plays/details/{{_id}}">Details</a>
+                                <a class="btn details" href="/play/details/{{_id}}">Details</a>
                                 <span class="likes">Likes</span>
                             </div>
                         </div>
