--- a/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/partials/play.hbs
+++ b/JS Web/JS Back-end/07. Exam preparation 2/Theater/views/partials/play.hbs
@@ -8,7 +8,7 @@
                             <h4>{{title}}</h4>
                             <div class="info-buttons">
                                 <a class="btn details" href="/play/details/{{_id}}">Details</a>
-                                <span class="likes">Likes</span>
+                                <span class="likes">{{userLiked.length}} Likes</span>
                             </div>
                         </div>
                     </div>
