--- a/JS Web/JS Back-end/Exams/Crypto Trade/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/Crypto Trade/views/layouts/main.hbs
@@ -6,25 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page - Crypto Web</title>
-    <link rel="stylesheet" href="./static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 
 <body>
     <header class="header">
         <nav>
-            <img src="./static/images/logo.png" class="logo">
+            <img src="/static/images/logo.png" class="logo">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="#">All Crypto</a></li>
                 <li><a href="#">Search</a></li>
                 <li><a href="#">Create Offer</a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
+                <li><a href="/auth/login">Login</a></li>
+                <li><a href="/auth/register">Register</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
         </nav>
     </header>
-
+        {{#if errors}}
+        <!-- In case of error, you should display div with class "errorContainer" -->
+        <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+        <div>
+            <div class="errorContainer">
+                {{#each errors}}
+                <p>{{this}}</p>
+                {{/each}}
+            </div>
+        </div> 
+        {{/if}}
     {{{body}}}
     
     <footer>
