--- a/JS Web/JS Back-end/Exams/Crypto Trade/views/home.hbs
+++ b/JS Web/JS Back-end/Exams/Crypto Trade/views/home.hbs
@@ -8,16 +8,27 @@
         </div>
 
         <div class="coin-list">
-            {{#each offers}}  
-                <div class="offer-list"></div>
-                {{> offer}}
+            <div class="coin">
+                <img src="/static/images/bitcoin.png">
+                <div>
+                    <h3>$31,166.71</h3>
+                    <p>Bitcoin</p>
                 </div>
-            {{else}}
-            <div class="no-offer">
-                <p>There are no crypto offers found!</p>
-            </div> 
-            {{/each}}
+            </div>
+            <div class="coin">
+                <img src="/static/images/ethereum.png">
+                <div>
+                    <h3>$2,338.55</h3>
+                    <p>Ethereum</p>
+                </div>
+            </div>
+            <div class="coin">
+                <img src="/static/images/dogecoin.png">
+                <div>
+                    <h3>$0.09478</h3>
+                    <p>Dogecoin</p>
+                </div>
+            </div>
         </div>
     </main>
 
-   
