--- a/JS Web/JS Back-end/Exams/Crypto Trade/views/details.hbs
+++ b/JS Web/JS Back-end/Exams/Crypto Trade/views/details.hbs
@@ -29,7 +29,7 @@
                     <p class="buy-message">You already bought these crypto coins.</p>
                         {{else}}
                     <!-- Logged in user who has not yet buy this crypto-->
-                    <a href="/crypto/buy" class="btn-buy">Buy</a>
+                    <a href="/crypto/buy/{{_id}}" class="btn-buy">Buy</a>
                         {{/if}}
                         {{/if}}
                     
