--- a/JS Web/JS Back-end/Exams/Crypto Trade/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/Crypto Trade/views/layouts/main.hbs
@@ -46,10 +46,9 @@
         
     {{{body}}}
     
-    <!--<footer>
+    <footer>
         <p>Back-End 2022</p>
-    </footer>-->
-
+    </footer>   
 </body>
 
 </html>
