--- a/JS Web/JS Back-end/Exams/Retake Exam - 13 April 2023/Gaming-Team/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/Retake Exam - 13 April 2023/Gaming-Team/views/layouts/main.hbs
@@ -16,11 +16,14 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/game/catalog">All Games Code</a></li>
+                {{#if user}}
                 <li><a href="/game/search">Search</a></li>
                 <li><a href="/game/create">Create Game Offer</a></li>
+                <li><a href="/auth/logout">Logout</a></li>
+                {{else}}   
                 <li><a href="/auth/login">Login</a></li>
                 <li><a href="/auth/register">Register</a></li>
-                <li><a href="/auth/logout">Logout</a></li>
+                {{/if}}
             </ul>
         </nav>
     </header>
