--- a/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/catalog.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/catalog.hbs
@@ -1,61 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>All-Ads Page</title>
-
-    <!-- Do not forget to change the path to the css file -->
-    <link rel="stylesheet" href="./static/css/style.css">
-</head>
-
-<body>
-
-    <div class="box">
-
-        <!-- In case of error, you should display div with class "error-box" -->
-        <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-        <!--<div class="error-box">
-            <p>Error</p>
-        </div>-->
-
-        <header class="header">
-            <article class="header-logo">
-                <!-- Do not forget to change the path to the image -->
-                <img src="./static/img/logo.png">
-            </article>
-            <nav class="header-nav">
-                <ul class="header-nav-list">
-
-                    <li class="header-nav-list-item active">
-                        <a href="#" class="header-nav-list-item-link active">Home Page</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">All ads</a>
-                    </li>
-                    <!-- Logged users -->
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Create Ad</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Search</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Logout</a>
-                    </li>
-
-                    <!-- Guest users -->
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Register</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Login</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-
-        <main>
 
             <section id="all-ads-page">
                 <article class="all-ads-title">
@@ -66,7 +8,7 @@
                 <article class="all-ads-card">
                     <article class="all-ads-card-image">
                         <!-- Do not forget to change the path to the image -->
-                        <img src="./static/img/job-icon1.png" alt="job-icon">
+                        <img src="/static/img/job-icon1.png" alt="job-icon">
                     </article>
 
                     <article class="all-ads-card-content">
@@ -75,7 +17,7 @@
                         <h3>Company Name: Digital Solutions</h3>
                         <article class="all-ads-card-content-item">
                             <!-- Do not forget to change the path to the image -->
-                            <img src="./static/img/map-icon.png">
+                            <img src="/static/img/map-icon.png">
                             <p>Location 210-27 Sofia, Market Street, Bulgaria</p>
                         </article>
                     </article>
@@ -114,13 +56,3 @@
                 </article>-->
 
             </section>
-        </main>
-
-        <footer>
-            <p>©Js Back-End Final Exam 2022</p>
-        </footer>
-    </div>
-
-</body>
-
-</html>
