--- a/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/home.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/home.hbs
@@ -1,68 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Home Page</title>
-
-    <!-- Do not forget to change the path to the css file -->
-    <link rel="stylesheet" href="./static/css/style.css">
-</head>
-
-<body>
-
-    <div class="box">
-
-        <!-- In case of error, you should display div with class "error-box" -->
-        <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-        <!--<div class="error-box">
-            <p>Error</p>
-        </div>-->
-
-        <header class="header">
-            <article class="header-logo">
-                <!-- Do not forget to change the path to the image -->
-                <img src="./static/img/logo.png">
-            </article>
-            <nav class="header-nav">
-                <ul class="header-nav-list">
-
-                    <li class="header-nav-list-item active">
-                        <a href="#" class="header-nav-list-item-link active">Home Page</a>
-                    </li>
-
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">All ads</a>
-                    </li>
-                    <!-- Logged users -->
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Create Ad</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Search</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Logout</a>
-                    </li>
-
-                    <!-- Guest users -->
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Register</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Login</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-
-        <main>
 
             <section id="home-page">
                 <article class="home-page-content">
                     <h1>Find The Job That Fits Your Life</h1>
                     <p>On this site, you can find hundreds of job offers, do not hesitate, and apply now.</p>
-                    <a href="#" class="view-all-ads">View all ads</a>
+                    <a href="/ad/catalog" class="view-all-ads">View all ads</a>
                 </article>
                 <article class="home-page-image">
                     <!-- Do not forget to change the path to the image -->
@@ -127,13 +68,3 @@
 
                 </article>
             </section>
-        </main>
-
-        <footer>
-            <p>©Js Back-End Final Exam 2022</p>
-        </footer>
-    </div>
-
-</body>
-
-</html>
