--- a/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/layouts/main.hbs
@@ -3,43 +3,67 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page - Crypto Web</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <title>Home Page</title>
+
+    <!-- Do not forget to change the path to the css file -->
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
 <body>
-    <header class="header">
-        <nav>
-            <img src="/static/images/logo.png" class="logo">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="#">All Crypto</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="#">Create Offer</a></li>
-                <li><a href="/auth/login">Login</a></li>
-                <li><a href="/auth/register">Register</a></li>
-                <li><a href="/auth/logout">Logout</a></li>
-            </ul>
-        </nav>
-    </header>
-        {{#if errors}}
-        <!-- In case of error, you should display div with class "errorContainer" -->
+
+    <div class="box">
+
+        <!-- In case of error, you should display div with class "error-box" -->
         <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-        <div>
-            <div class="errorContainer">
-                {{#each errors}}
-                <p>{{this}}</p>
-                {{/each}}
-            </div>
-        </div> 
-        {{/if}}
-    {{{body}}}
-    
-    <footer>
-        <p>Back-End 2022</p>
-    </footer>
+        <!--<div class="error-box">
+            <p>Error</p>
+        </div>-->
+
+        <header class="header">
+            <article class="header-logo">
+                <!-- Do not forget to change the path to the image -->
+                <img src="/static/img/logo.png">
+            </article>
+            <nav class="header-nav">
+                <ul class="header-nav-list">
+
+                    <li class="header-nav-list-item active">
+                        <a href="/" class="header-nav-list-item-link active">Home Page</a>
+                    </li>
+
+                    <li class="header-nav-list-item">
+                        <a href="/ad/catalog" class="header-nav-list-item-link">All ads</a>
+                    </li>
+                    <!-- Logged users -->
+                    <li class="header-nav-list-item">
+                        <a href="/ad/create" class="header-nav-list-item-link">Create Ad</a>
+                    </li>
+                    <li class="header-nav-list-item">
+                        <a href="#" class="header-nav-list-item-link">Search</a>
+                    </li>
+                    <li class="header-nav-list-item">
+                        <a href="/logout" class="header-nav-list-item-link">Logout</a>
+                    </li>
+
+                    <!-- Guest users -->
+                    <li class="header-nav-list-item">
+                        <a href="/auth/register" class="header-nav-list-item-link">Register</a>
+                    </li>
+                    <li class="header-nav-list-item">
+                        <a href="/auth/login" class="header-nav-list-item-link">Login</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            {{{body}}}
+        </main>
+
+        <footer>
+            <p>©Js Back-End Final Exam 2022</p>
+        </footer>
+    </div>
 
 </body>
 
