--- a/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/catalog.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/catalog.hbs
@@ -30,7 +30,7 @@
                 <article class="all-ads-card">
                     <article class="all-ads-card-image">
                         <!-- Do not forget to change the path to the image -->
-                        <img src="./static/img/job-icon1.png" alt="job-icon">
+                        <img src="/static/img/job-icon1.png" alt="job-icon">
                     </article>
 
                     <article class="all-ads-card-content">
@@ -39,7 +39,7 @@
                         <h3>Company Name:search-page-no-result-message</h3>
                         <article class="all-ads-card-content-item">
                             <!-- Do not forget to change the path to the image -->
-                            <img src="./static/img/map-icon.png">
+                            <img src="/static/img/map-icon.png">
                             <p>Location Ruse, Market Street, Bulgaria</p>
                         </article>
                     </article>
