--- a/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/register.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/register.hbs
@@ -7,16 +7,16 @@
                         <p>Join us and find the perfect job.</p>
 
                         <label for="email">Email:</label>
-                        <input type="text" id="email" placeholder="petar@abv.bg" name="">
+                        <input type="text" id="email" placeholder="petar@abv.bg" name="email">
 
                         <label for="password">Password:</label>
-                        <input type="password" id="password" placeholder="******" name="">
+                        <input type="password" id="password" placeholder="******" name="password">
 
                         <label for="repeat-password">Repeat Password:</label>
-                        <input type="password" id="repeat-password" placeholder="******" name="">
+                        <input type="password" id="repeat-password" placeholder="******" name="rePass">
 
                         <label for="description">Briefly describe your skills:</label>
-                        <input type="text" id="description" placeholder="Experience with HTML 5, CSS 3, Node.js" name="">
+                        <input type="text" id="description" placeholder="Experience with HTML 5, CSS 3, Node.js" name="description">
 
                         <article class="register-page-button">
                             <button class="btn-register">Register</button>
