--- a/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/login.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/login.hbs
@@ -8,10 +8,10 @@
                         <p>Welcome, see the new ads!</p>
 
                         <label for="email">Email:</label>
-                        <input type="text" id="email" placeholder="petar@abv.bg" name="">
+                        <input type="text" id="email" placeholder="petar@abv.bg" name="email">
 
                         <label for="password">Password:</label>
-                        <input type="password" id="password" placeholder="******" name="">
+                        <input type="password" id="password" placeholder="******" name="password">
 
                         <article class="login-page-button">
                             <button class="btn-login">Login</button>
