--- a/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/home.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/home.hbs
@@ -7,7 +7,7 @@
                 </article>
                 <article class="home-page-image">
                     <!-- Do not forget to change the path to the image -->
-                    <img src="./static/img/man.png" alt="man">
+                    <img src="/static/img/man.png" alt="man">
                 </article>
             </section>
 
@@ -15,7 +15,7 @@
                 <article class="intro-left-side">
                     <article class="intro-left-side-image">
                         <!-- Do not forget to change the path to the image -->
-                        <img src="./static/img/people-group.png" alt="people">
+                        <img src="/static/img/people-group.png" alt="people">
                     </article>
                     <article class="intro-left-side-text">
                         <h1>You're Looking for Trending Jobs!</h1>
@@ -25,14 +25,18 @@
 
                 <article class="intro-symbol">
                     <!-- Do not forget to change the path to the image -->
-                    <img src="./static/img/strip-square.png" alt="strip-square">
+                    <img src="/static/img/strip-square.png" alt="strip-square">
                 </article>
 
                 <article class="intro-right-side">
+                    {{#if ads}}
                     <!--If there are job ads in the database, show them (max 3)-->
-                    <article class="intro-right-side-content">
+                    {{#each ads}}
+                    {{> ad}}
+                    {{/each}}
+                    {{!-- <article class="intro-right-side-content">
                         <!-- Do not forget to change the path to the image -->
-                        <img src="./static/img/technology.png" alt="technology">
+                        <img src="/static/img/technology.png" alt="technology">
                         <h5>
                             <!--Put the value of the headline below-->
                             Front End Developer
@@ -43,7 +47,7 @@
 
                     <article class="intro-right-side-content">
                         <!-- Do not forget to change the path to the image -->
-                        <img src="./static/img/technology.png" alt="technology">
+                        <img src="/static/img/technology.png" alt="technology">
                         <h5>
                             <!--Put the value of the headline below-->
                             Teacher
@@ -54,17 +58,18 @@
 
                     <article class="intro-right-side-content">
                         <!-- Do not forget to change the path to the image -->
-                        <img src="./static/img/technology.png" alt="technology">
+                        <img src="/static/img/technology.png" alt="technology">
                         <h5>
                             <!--Put the value of the headline below-->
                             Mathematician
                             <!--Put the value of the total number of candidates below-->
                             <span>Candidates: 0</span>
                         </h5>
-                    </article>
-
+                    </article> --}}
+                    {{else}}
                     <!--If not show:-->
-                    <!--<p class="no-ads-created">No ads created!</p>-->
+                    <p class="no-ads-created">No ads created!</p>
+                    {{/if}}
 
                 </article>
             </section>
