--- a/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/layouts/main.hbs
@@ -34,7 +34,7 @@
                     <li class="header-nav-list-item">
                         <a href="/ad/catalog" class="header-nav-list-item-link">All ads</a>
                     </li>
-                    <!-- Logged users -->
+                    {{#if user}}
                     <li class="header-nav-list-item">
                         <a href="/ad/create" class="header-nav-list-item-link">Create Ad</a>
                     </li>
@@ -42,16 +42,16 @@
                         <a href="#" class="header-nav-list-item-link">Search</a>
                     </li>
                     <li class="header-nav-list-item">
-                        <a href="/logout" class="header-nav-list-item-link">Logout</a>
+                        <a href="/auth/logout" class="header-nav-list-item-link">Logout</a>
                     </li>
-
-                    <!-- Guest users -->
+                    {{else}}
                     <li class="header-nav-list-item">
                         <a href="/auth/register" class="header-nav-list-item-link">Register</a>
                     </li>
                     <li class="header-nav-list-item">
                         <a href="/auth/login" class="header-nav-list-item-link">Login</a>
                     </li>
+                    {{/if}}
                 </ul>
             </nav>
         </header>
