--- a/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/partials/ad.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/partials/ad.hbs
@@ -3,8 +3,8 @@
                         <img src="/static/img/technology.png" alt="technology">
                         <h5>
                             <!--Put the value of the headline below-->
-                            {{ad.headline}}
+                            {{headline}}
                             <!--Put the value of the total number of candidates below-->
-                            <span>Candidates: {{ad.users}}</span>
+                            <span>Candidates: {{users.length}}</span>
                         </h5>
                     </article>
