Validation and Error Handling
Validation and Error Handling

--- a/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 26 February 2022/01. Job Ads_Resources/views/layouts/main.hbs
@@ -12,13 +12,15 @@
 <body>
 
     <div class="box">
-
+        {{#if errors}}
         <!-- In case of error, you should display div with class "error-box" -->
         <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-        <!--<div class="error-box">
-            <p>Error</p>
-        </div>-->
-
+        <div class="error-box">
+            {{#each errors}}
+            <p>{{this}}</p>
+            {{/each}}
+        </div>
+        {{/if}}
         <header class="header">
             <article class="header-logo">
                 <!-- Do not forget to change the path to the image -->
