Register and Login
Register and Login pages

--- a/JS Web/JS Back-end/Exams/Retake Exam - 18 Aug 2022/01. Book Talk_Ресурси/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/Retake Exam - 18 Aug 2022/01. Book Talk_Ресурси/views/layouts/main.hbs
@@ -3,69 +3,37 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home Page</title>
-
-    <!-- Do not forget to change the path to the css file -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book Store</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+
 </head>
 
 <body>
 
-    <div class="box">
-        {{#if errors}}
-        <!-- In case of error, you should display div with class "error-box" -->
-        <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-        <div class="error-box">
-            {{#each errors}}
-            <p>{{this}}</p>
-            {{/each}}
-        </div>
-        {{/if}}
-        <header class="header">
-            <article class="header-logo">
-                <!-- Do not forget to change the path to the image -->
-                <img src="/static/img/logo.png">
-            </article>
-            <nav class="header-nav">
-                <ul class="header-nav-list">
+    <header class="header">
 
-                    <li class="header-nav-list-item active">
-                        <a href="/" class="header-nav-list-item-link active">Home Page</a>
-                    </li>
-
-                    <li class="header-nav-list-item">
-                        <a href="/ad/catalog" class="header-nav-list-item-link">All ads</a>
-                    </li>
-                    {{#if user}}
-                    <li class="header-nav-list-item">
-                        <a href="/ad/create" class="header-nav-list-item-link">Create Ad</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Search</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="/auth/logout" class="header-nav-list-item-link">Logout</a>
-                    </li>
-                    {{else}}
-                    <li class="header-nav-list-item">
-                        <a href="/auth/register" class="header-nav-list-item-link">Register</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="/auth/login" class="header-nav-list-item-link">Login</a>
-                    </li>
-                    {{/if}}
-                </ul>
+        <div class="header">
+            <nav class="navbar">
+                <a href="/">Home</a>
+                <a href="/book/catalog">Catalog</a>
+                <!--Only for logged user-->
+                <a href="/auth/profile">Profile</a>
+                <a href="/book/create">Create Review</a>
+                <a href="/auth/logout">Logout</a>
+                <!--Only for guest-->
+                <a href="/auth/login">Login</a>
+                <a href="/auth/register">Register</a>
             </nav>
-        </header>
+        </div>
 
-        <main>
-            {{{body}}}
-        </main>
+    </header>
 
-        <footer>
-            <p>©Js Back-End Final Exam 2022</p>
-        </footer>
-    </div>
+    <section class="home" id="home">
+        {{{body}}}
+    </section>
 
 </body>
 
