Catalog and create
Catalog and create page

--- a/JS Web/JS Back-end/Exams/Retake Exam - 18 Aug 2022/01. Book Talk_Ресурси/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/Retake Exam - 18 Aug 2022/01. Book Talk_Ресурси/views/layouts/main.hbs
@@ -19,13 +19,14 @@
             <nav class="navbar">
                 <a href="/">Home</a>
                 <a href="/book/catalog">Catalog</a>
-                <!--Only for logged user-->
+                {{#if user}}
                 <a href="/auth/profile">Profile</a>
                 <a href="/book/create">Create Review</a>
                 <a href="/auth/logout">Logout</a>
-                <!--Only for guest-->
+                {{else}}
                 <a href="/auth/login">Login</a>
                 <a href="/auth/register">Register</a>
+                {{/if}}
             </nav>
         </div>
 
