--- a/JS Web/JS Back-end/Exams/Retake Exam - 18 Aug 2022/01. Book Talk_Ресурси/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/Retake Exam - 18 Aug 2022/01. Book Talk_Ресурси/views/layouts/main.hbs
@@ -20,7 +20,7 @@
                 <a href="/">Home</a>
                 <a href="/book/catalog">Catalog</a>
                 {{#if user}}
-                <a href="/auth/profile">Profile</a>
+                <a href="/book/profile">Profile</a>
                 <a href="/book/create">Create Review</a>
                 <a href="/auth/logout">Logout</a>
                 {{else}}
@@ -31,7 +31,13 @@
         </div>
 
     </header>
-
+        {{#if errors}}
+        <div class="errorContainer">
+           {{#each errors}}
+            <p>{{this}}</p>
+            {{/each}}
+        </div>
+        {{/if}}
     <section class="home" id="home">
         {{{body}}}
     </section>
