--- a/JS Web/JS Back-end/Exams/Retake Exam - 18 Aug 2022/01. Book Talk_Ресурси/views/details.hbs
+++ b/JS Web/JS Back-end/Exams/Retake Exam - 18 Aug 2022/01. Book Talk_Ресурси/views/details.hbs
@@ -8,7 +8,7 @@
                 <h3>Author: {{book.author}}</h3>
                 <h3>Stars: {{book.stars}}</h3>
                 <h3>Genre: {{book.genre}}</h3>
-                <h3>Review: {{bookReview}}</h3>
+                <h3>Review: {{book.bookReview}}</h3>
                 {{#if book.hasUser}}
                 <!-- If there is no registered user, do not display buttons-->
                 <div class="buttons">
