Delete and edit
Delete and edit

--- a/JS Web/JS Back-end/08. Exam preparation 3/Petstagram/views/partials/comment.hbs
+++ b/JS Web/JS Back-end/08. Exam preparation 3/Petstagram/views/partials/comment.hbs
@@ -10,6 +10,6 @@
                                         </div>
 
                                         <!--User's username-->
-                                        <p><b>{{owner.username}}</b>{{comment}}</p>
+                                        <p><b>{{user.username}}</b> {{comment}}</p>
                                     </div>
                                 </div>
