--- a/JS Web/JS Back-end/Exams/End Exam - 19 April 2022/01. Auction House/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 19 April 2022/01. Auction House/views/layouts/main.hbs
@@ -1,102 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Starts Head Section -->
 
 <head>
-    <link rel="stylesheet" href="/static/css/styles.css">
-    <link rel="icon" type="image/x-icon" href="/static/images/free-30-instagram-stories-icons23_122570.png">
-    <title>Petstagram</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/site.css">
+    <title>Auction House</title>
 </head>
 
-<!-- Starts Body Section -->
-
 <body>
-    <!--Error Container-->
-        {{#if errors}}
-        <div>
-        <div class="errorContainer">
+
+    <div id="page-content">
+
+        <header>
+            <a href="/" class="title-logo">
+                <img src="/static/assets/logo.png">
+                <span>Auction House</span>
+            </a>
+            <nav class="main-nav nav-mid">
+                <ul>
+                    <li>
+                        <a href="/auction/browse">Browse</a>
+                    </li>
+                    {{#if user}}
+                    <!-- User actions -->
+                    <li class="user">
+                        <a href="/auction/publish">Publish</a>
+                    </li>
+
+                    <!-- Bonus action -->
+                    <!--
+                    <li class="user">
+                        <a href="#">Closed Auctions</a>
+                    </li>
+                    -->
+
+                    <li class="user">
+                        <a href="/auth/logout">Logout</a>
+                    </li>
+                    {{else}}
+                    <!-- Guest actions -->
+                    <li class="guest">
+                        <a href="/auth/register">Register</a>
+                    </li>
+                    <li class="guest">
+                        <a href="/auth/login">Login</a>
+                    </li>
+                    {{/if}}
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+
+            
+            {{#if errors}}
             {{#each errors}}
-            <p>{{this}}</p>
-            {{/each}}
-        </div>
-        </div>
-        {{/if}}
-
-    <!-- Starts Header Section with Navigation Bar -->
-    <header>
-        <nav class="navbar">
-            <div class="container">
-                <div class="logo">
-                    <!-- Link to Home Page -->
-                    <a href="/">
-                        <img width="50px" src="/static/images/free-30-instagram-stories-icons23_122570.png" alt="img1">
-                    </a>
-                    <!-- Link to Home Page -->
-                    <a class="home" href="/">
-                        <i>Petstagram</i>
-                    </a>
-                </div>
-
-                <div class="nav-links">
-                    <ul class="nav-group">
-                        <li class="nav-item">
-                            <!-- Link to Catalog Page -->
-                            <a href="/photo/catalog">
-                                <i>Catalog</i>
-                            </a>
-                        </li>
-
-                        {{#if user}}
-                        <!--For login users-->
-                        <li class="nav-item">
-                            <!-- Link to Add Photo Page -->
-                            <a href="/photo/create">
-                                <i>Add Photo</i>
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <!-- Link to Profile Page -->
-                            <a href="/photo/myPage">
-                                <i>Profile</i>
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <!-- Link to Logout Page -->
-                            <a href="/auth/logout">
-                                <i>Logout</i>
-                            </a>
-                        </li>
-                        {{else}}
-
-                        <!--For Guest User-->
-                        <li class="nav-item">
-                            <!-- Link to Login Page -->
-                            <a href="/auth/login">
-                                <i>Login</i>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <!-- Link to Register Page -->
-                            <a href="/auth/register">
-                                <i>Register</i>
-                            </a>
-                        </li>
-                        {{/if}}
-                    </ul>
-                </div>
+            <div class="error-box">
+                <p>{{this}}</p>
             </div>
-        </nav>
-    </header>
-<main>
-    {{{body}}}
-</main>
+            {{/each}}
+            {{/if}}
+            
 
-<div class="footer">
-        <span class="footer-section">
-            © 2023 SoftUni Back-End Exam
-        </span>
+            <!-- Home Page -->
+            {{{body}}}
+
+        </main>
+
+        <footer>SoftUni &copy; 2022 | Design by Viktor Kostadinov</footer>
     </div>
 
 </body>
