Create and catalog
Add create and catalog

--- a/JS Web/JS Back-end/Exams/End Exam - 19 April 2022/01. Auction House/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 19 April 2022/01. Auction House/views/layouts/main.hbs
@@ -25,7 +25,7 @@
                     {{#if user}}
                     <!-- User actions -->
                     <li class="user">
-                        <a href="/auction/publish">Publish</a>
+                        <a href="/auction/create">Publish</a>
                     </li>
 
                     <!-- Bonus action -->
