--- a/JS Web/JS Back-end/Exams/End Exam - 19 April 2022/01. Auction House/views/partials/auction.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 19 April 2022/01. Auction House/views/partials/auction.hbs
@@ -4,7 +4,7 @@
                         </header>
 
                         <div class="align-center">
-                            <img class="img-thumb" src="/static/assets/boat.jpg">
+                            <img class="img-thumb" src="{{imageUrl}}">
                         </div>
 
                         <footer class="align-center pad-med">
