Edit and Deelete
Add edit and delete

--- a/JS Web/JS Back-end/Exams/End Exam - 19 April 2022/01. Auction House/views/details.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 19 April 2022/01. Auction House/views/details.hbs
@@ -6,8 +6,8 @@
                     {{auction.title}}
                     {{#if auction.isAuthor}}
                     <div class="f-right">
-                        <a class="action pad-small f-left" href="#">Edit</a>
-                        <a class="action pad-small f-left" href="#">Delete</a>
+                        <a class="action pad-small f-left" href="/auction/edit/{{auction._id}}">Edit</a>
+                        <a class="action pad-small f-left" href="/auction/delete/{{auction._id}}">Delete</a>
                     </div>
                     {{/if}}
                 </h1>
