--- a/JS Web/JS Back-end/Exams/End Exam - 27 June 2021/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 27 June 2021/views/layouts/main.hbs
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="/trip/profile">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/logout">Logout as [ test@abv.bg ]</a>
+                        <a class="nav-link" href="/auth/logout">Logout as {{user.email}}</a>
                     </li>
                     {{else}}
                     <!-- Guest users -->
