--- a/JS Web/JS Back-end/Exams/End Exam - 27 June 2021/views/edit.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 27 June 2021/views/edit.hbs
@@ -3,7 +3,7 @@
             <div class="container edit">
                 <h1>Edit trip</h1>
                 <div>
-                    <form action="/trip/edit/{{trip._id}}" method="">
+                    <form action="/trip/edit/{{trip._id}}" method="POST">
                         <div class="edit-label">
                             <label for="startPoint"> <i class="fas fa-map-marker-alt"></i> Starting Point</label>
                             <label for="endPoint"> <i class="fas fa-map-marker-alt"></i> End Point</label>
