--- a/JS Web/JS Back-end/Exams/End Retake Exam - 14 Dec 2021/01. ArtGallery/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/End Retake Exam - 14 Dec 2021/01. ArtGallery/views/layouts/main.hbs
@@ -31,7 +31,7 @@
                 {{#if user}}
                 <!-- Logged users -->
                 <li><a href="/product/create">Create Publication</a></li>
-                <li><a href="/product/profile">Profile</a></li>
+                <li><a href="/auth/profile">Profile</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
                 <!-- Guest users -->
                 {{else}}
