Login and register
Login and register

--- a/JS Web/JS Back-end/Exams/End Exam - 30 October 2021/WildWife/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 30 October 2021/WildWife/views/layouts/main.hbs
@@ -38,7 +38,7 @@
                 <li><a href="/auth/logout">Logout</a></li>
                 {{else}}
                 <!-- Guest users -->
-                <li><a href="/auth/regiter">Register</a></li>
+                <li><a href="/auth/register">Register</a></li>
                 <li><a href="/auth/login">Login</a></li>
                 {{/if}}
             </ul>
